--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-pillow
-psutil
+pillow>=9.0.0        # For image processing (screenshots, hide/extract)
+psutil>=5.9.0        # For system info and running processes
+netifaces>=0.11.0    # For network interface detection
