--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-pillow>=9.0.0        # For image processing (screenshots, hide/extract)
-psutil>=5.9.0        # For system info and running processes
-netifaces>=0.11.0    # For network interface detection
+pillow
+psutil
+netifaces
+pyautogui           
+
